Role agora é um enum