@@ -6,6 +6,7 @@ import com.jan1ooo.agenda.domain.entity.request.AgendaRequest;
 import com.jan1ooo.agenda.domain.repository.AgendaRepository;
 import com.jan1ooo.agenda.exception.BusinessException;
 import com.jan1ooo.agenda.exception.RecordNotFoundException;
+import jakarta.validation.ConstraintViolationException;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Positive;
 import lombok.RequiredArgsConstructor;
@@ -16,7 +17,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -27,7 +27,7 @@ public class AgendaService {
     private final AgendaMapper mapper;
 
     public List<AgendaDto> findAll(){
-        return repository.findAll().stream().map(mapper::toDto).collect(Collectors.toList());
+        return repository.findAll().stream().map(mapper::toDto).toList();
     }
 
     public AgendaDto findById(@Positive Long id){
@@ -49,6 +49,9 @@ public class AgendaService {
         }
         catch (InvalidDataAccessApiUsageException e){
             throw new BusinessException("ID do paciente é Obrigatório");
+        }
+        catch (ConstraintViolationException e){
+            throw new BusinessException("Data de agendamento precisa ser futura");
         }
     }
 
